syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.rachvik.id";

message UniqueIdRequest {
  string service_name = 1;
}

message UniqueIdResponse {
  string service_name = 1;
  int64 id = 2;
}
