syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.rachvik.id";
import "id/models/id.proto";

service UniqueIdService {
  rpc getUniqueId(UniqueIdRequest) returns (UniqueIdResponse) {};
}
